--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
 - Structure and Layout
 	- Site Container
 	- Site Inner
+- Templates
+	- Archive
 - Common Classes
 	- Avatar
 	- Genesis
@@ -154,7 +156,7 @@ html {
 
 /* Chrome fix */
 body > div {
-	
+
 	font-size: 1.8rem;
 }
 
@@ -599,6 +601,51 @@ th:first-child {
 	padding: 0;
 }
 
+/* Templates
+---------------------------------------------------------------------------------------------------- */
+
+/* Archive Template
+--------------------------------------------- */
+.post-archive article header.entry-header {
+	margin-left: 0;
+	height: auto;
+}
+
+.post-archive article {
+	width: 40vw;
+	border: 1px solid #9799B7;
+	padding: 20px;
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+.post-archive article:hover {
+	background: #F4F4F5;
+}
+
+.post-archive .entry-content {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.post-archive .archive-description {
+	float: right;
+	clear: both;
+}
+
+.post-archive .archive-title {
+	font-size: 5rem;
+}
+
+.post-archive .content-sidebar-wrap {
+	float: right;
+	width: 48vw;
+}
+
+.post-archive .content{
+	clear: both;
+}
 
 /* Common Classes
 ---------------------------------------------------------------------------------------------------- */
@@ -718,9 +765,9 @@ th:first-child {
 	margin-bottom: 20px;
 }
 
-/* WordPress - 
-NOTE: many of these styles should be overridden by the column system included below.  
-We could use these later to make editing simpler by tying our columns to the default alignments, 
+/* WordPress -
+NOTE: many of these styles should be overridden by the column system included below.
+We could use these later to make editing simpler by tying our columns to the default alignments,
 but that is probably dependent on Gutenberg.
 --------------------------------------------- */
 
@@ -798,7 +845,7 @@ img.alignright,
 
 
 /* Widgets - Not used in the root site MVP, but may be needed in later iterations.
----------------------------------------------------------------------------------------------------- 
+----------------------------------------------------------------------------------------------------
 
 .widget {
 	margin-bottom: 40px;
@@ -871,7 +918,7 @@ img.alignright,
 
 
 /* Genesis Simple FAQ - May be used in later iterations or in the Knowledge site.
---------------------------------------------- 
+---------------------------------------------
 
 .gs-faq__question {
 	background: transparent;
@@ -1342,7 +1389,7 @@ p.entry-meta {
 
 /* Content blocks
 --------------------------------------------- */
-.block-tall, .block-short{  
+.block-tall, .block-short{
     display: block;
     clear: none;
     margin-bottom: 20px;
@@ -1350,7 +1397,7 @@ p.entry-meta {
 }
 
 .block-tall{
-        height: 640px;  
+        height: 640px;
 }
 
 .block-tall p, .block-short p {
@@ -1362,7 +1409,7 @@ p.entry-meta {
 
 .block-short{
     height: 300px;
-    
+
 }
 
 .static{
@@ -1463,7 +1510,7 @@ div.call-to-action p{
 
 	.site-header {
 		width: 100%;
-        height: 30vh;
+        /*height: 30vh; */
 	}
 
 	/* Genesis Menu
@@ -1472,7 +1519,7 @@ div.call-to-action p{
 	.genesis-nav-menu .menu-item {
 		display: inline-block;
 	}
-    
+
     /*Ensure footer menu stays stacked vertically*/
     .genesis-nav-menu.menu-secondary .menu-item{
         display: block;
@@ -1487,7 +1534,7 @@ div.call-to-action p{
 		font-weight: 700;
 	}
 /*not certain what this affects - maybe drop down*/
-    
+
 	.genesis-nav-menu > .menu-highlight > a {
 		background-color: #333;
 		border-radius: 3px;
@@ -1507,7 +1554,7 @@ div.call-to-action p{
 	.genesis-responsive-menu .genesis-nav-menu .sub-menu a {
 		width: 180px;
 	}
-    
+
 	.genesis-nav-menu .sub-menu {
 		border-top: 1px solid #eee;
 		opacity: 0;
@@ -1526,8 +1573,8 @@ div.call-to-action p{
 	.genesis-nav-menu .sub-menu .sub-menu {
 		margin: -46px 0 0 179px;
 	}
-    
-    
+
+
 
 	/* Responsive Menu
 	--------------------------------------------- */
@@ -1562,17 +1609,17 @@ div.call-to-action p{
 		margin-top: 70px;
 		max-width: 90vw;
 	}
-    
+
 
 	/* Content
 	--------------------------------------------- */
-    
+
     header.entry-header{
         margin-left: 52.5%;
         height: 70vh;
         padding-top: 0;
     }
-    
+
     h1.entry-title{
     font-size: 80px;
     }
@@ -1592,7 +1639,7 @@ div.call-to-action p{
 		margin-left: auto;
 		margin-right: auto;
 	}
-    
+
     /* Content grid
     --------------------------------------------- */
     .l-c, .r-c, .c-c{
@@ -1610,10 +1657,10 @@ div.call-to-action p{
         margin: auto;
         text-align: center;
     }
-    
+
     /* Content blocks
     --------------------------------------------- */
-    .block-tall, .block-short{ 
+    .block-tall, .block-short{
         width: 37.5vw;
     }
 
@@ -1625,10 +1672,10 @@ div.call-to-action p{
         float: right;
     }
 
-    
+
     /* Image captions
     --------------------------------------------- */
-    
+
     .gallery-caption,
     .wp-caption-text {
 	   margin: 0;
@@ -1642,7 +1689,7 @@ div.call-to-action p{
     }
 
 	/* Column Classes - Used in the different layouts
-	--------------------------------------------- 
+	---------------------------------------------
 
 	.five-sixths,
 	.four-sixths,
@@ -1695,7 +1742,7 @@ div.call-to-action p{
 		clear: both;
 		margin-left: 0;
 	}
-    
+
     */
 
 	/* Entry Misc.
@@ -1721,14 +1768,14 @@ div.call-to-action p{
 
 
 
-    
+
     /* Footer Menu
 	--------------------------------------------- */
-    
+
     .nav-secondary{
         padding-left: 52.5vw;
     }
-    
+
     .nav-secondary ul li a{
         line-height: 70px;
     }
